# INTERLEVPROJECT

./: # Code Citations.md  .gitignore  agent_system_design.md  check_task.py  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  requirements.txt  run_local.ps1  sample_cv.txt  speed_test.py  startup_commands.txt  test_cv.py  vercel.json
backend/: Dockerfile  main.py  mcp_server.py  tasks.py
backend/agents/: application.py  cv_reader.py  generator.py  matching.py  orchestrator.py  search.py  tools.py
backend/app/: database.py
backend/app/agents/: application_writer_agent.py  candidate_profile_agent.py  cv_formatter_agent.py  cv_reader_agent.py  human_review_agent.py  job_parser_agent.py  job_search_agent.py  logging_agent.py  matching_agent.py  notification_agent.py
backend/app/api/: __init__.py  routes_applications.py  routes_candidates.py  routes_cv.py  routes_jobs.py  routes_logs.py  routes_matches.py  routes_mcp.py  routes_notifications.py  routes_review.py  routes_settings.py
backend/app/models/: __init__.py  agent_log.py  application.py  candidate.py  cv.py  job.py  match.py  notification.py  review.py
backend/app/services/: app_settings.py  (+2 more)
backend/core/: celery_app.py  config.py
backend/models/: schemas.py
cv_templates/: INTERLEV_Freelancer_Template_1.docx
frontend/: Dockerfile  Dockerfile.next  app.py  package-lock.json  package.json
frontend-streamlit/: app.py
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
frontend/services/: candidate.service.ts  cv.service.ts  job.service.ts
(+9 files in other folders)
