[project]
name = "interlev-ai-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "python-dotenv",
    "openai",
    "python-docx",
    "requests",
    "beautifulsoup4",
    "python-multipart",
    "celery",
    "redis",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg2-binary",
    "pdfplumber",
]

[tool.vercel]
entrypoint = "backend.main:app"
